--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <script>
         sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='https://kexplx.github.io/ng-crimeview'"></meta>
+    <meta http-equiv="refresh" content="0;URL='https://kexplx.github.io/ng-notes'"></meta>
 </head>
 
 <body>
